<resources>
    <string name="app_name">The Now Order</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Now Order</string>
    <string name="nav_header_subtitle">Autores: Javier y Juan Fran</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_record">Historial</string>
    <string name="menu_authors">Acerca de</string>

    <string name="select_table_string">Selecciona una mesa</string>
    <string name="title_activity_new_order_tabbed">NewOrderTabbedActivity</string>
    <string name="drinks">Bebidas</string>
    <string name="foods">Comidas</string>
    <string name="desserts">Postres</string>
    <string name="intentNumTable">INTENT_NUM_TABLE</string>
    <string name="product_name">Producto</string>
    <string name="product_price">Precio</string>
    <string name="create_order">Crear nuevo pedido</string>
    <string name="added">Se ha añadido</string>
    <string name="pay_order">Pagar</string>
    <string name="edit_order">Editar</string>
    <string name="table">Mesa</string>
    <string name="price">Precio</string>
    <string name="no_data">No hay órdenes aún</string>
    <string name="new_order">Nuevo pedido</string>
    <string name="intentOrder">ORDER_INTENT</string>
    <string name="intentIsInsert">IS_INSERT_INTENT</string>
    <string name="update_order">Actualizar pedido</string>
    <string name="intentProducts">INTENT_PRODUCT_LIST</string>
    <string name="product_chart">Carta de productos</string>
    <string name="pay_bill">Pagar</string>
    <string name="msg_cash">0.00</string>
    <string name="msg_bill">Coloque cantidad en efectivo</string>
    <string name="msg_total_price">Precio Total:</string>
    <string name="pay_bill_activity">Pagar la cuenta</string>

    <string name="modoNoche">Modo Noche</string>
    <string name="modoNocheSummary">Activa el modo noche</string>
    <string name="modoDiaSummary">Desactiva el modo noche</string>
    <string name="total_num_tables">Numero de mesas</string>

    <string name="delete_product_question">Eliminar de la orden el producto</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="record_order">Consultar historial</string>
    <string name="record_order_activity">Historial de pedido</string>
    <string name="delete_order">Borrar pedido</string>
    <string name="settings">Ajustes</string>
</resources>
