<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"  android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PayBillActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_record_product_list"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorBackgroundProductList"/>

        <EditText
            android:id="@+id/introduce_cash_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginTop="76dp"
            android:ems="10"
            android:hint="@string/msg_cash"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_price_bill_tv" />

        <TextView
            android:id="@+id/msg_bill_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="116dp"
            android:layout_marginTop="32dp"
            android:text="@string/msg_bill"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/introduce_cash_et" />

        <Button
            android:id="@+id/pay_bill_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="76dp"
            android:enabled="false"
            android:text="@string/pay_bill"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/msg_bill_tv" />

        <TextView
            android:id="@+id/total_price_bill_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="60dp"
            android:text="Total"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/total_price_bill_msg"
            app:layout_constraintTop_toBottomOf="@+id/rv_record_product_list" />

        <TextView
            android:id="@+id/total_price_bill_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="68dp"
            android:text="@string/msg_total_price"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_record_product_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>